--- a/style.css
+++ b/style.css
@@ -48,3 +48,37 @@ input {
 .movie_text span {
     color: #ff7700;
 }
+.enviroment_li {
+    margin-top: 13px;
+}
+.enviroment_li h4 {
+    border-bottom: 1px solid white;
+    padding: 8px;
+}
+.enviroment_li img {
+    border-radius: 25px;
+}
+.enviroment_li p {
+    margin-top: 10px;
+}
+.header-entreprenuer {
+    line-height: 2;
+}
+.book {
+    cursor: pointer;
+}
+.book hr{
+    margin-bottom: 10px;
+}
+.modal-content {
+    margin-top: 100px;
+}
+.img_modal {
+    display: inline-block;
+}
+.p_modal {
+    margin-top: 10px;
+}
+.modal_body {
+    text-align: center;
+}
